--- a/html/solution/interview.html
+++ b/html/solution/interview.html
@@ -41,8 +41,7 @@ design:
 coding: 543(ok), 42(ok), 56(ok), 297(ok), 88(ok), 23(ok), 1026(ok), 773(ok), 84(ok)
 109(ok)， 938(ok), 328(ok), 896(ok), 54(0k), 157(ok), 158(ok), 20(ok), 22(ok), 301(ok), 1249(ok), 472(ok), 339(ok), 973(ok), 1197(ok), 215, 785, 1249(ok), 1428, 621(ok), 560(ok), 129(ok), 238(ok)
 416(ok), 435(ok), 236(ok), (858), 1047(ok), 211(ok), 10(ok), 191(ok), 125(ok), 78(ok)， 339, 71变体(ok), 239变体(ok), 498 变体(ok) 单向右上(每一层都翻转 ok)
-1123(ok)
-
+1123(ok), 47(ok), 154(ok), 1275(n*n O(1) ok), 
 
 925
 
@@ -106,6 +105,7 @@ onflicts with colleagues
 negative feedback from manager
 deal with deadlines
 
+bq挑刺的地方就是一直在challenge你的答案  一定要一些经验  比如跟别人意见不同，结果你是错的  同时还要说跟别人意见不同，结果你是对的  要详细描述这个push back的过程（我这个部分讲了2分钟，他觉得不够戏剧化，不够detail）  还有要说自己曾经失败的经验  说了一个 他觉得不算 要真正失败的经验  全程就感觉是鸡同鸭讲  还有就是bq就是要很会讲故事 可能我讲故事能力太弱  
 
 
 
