--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -484,7 +484,14 @@ number   Date        rank         score    Finish time     Q1              Q2   
 9/16       1
 9/17       2     0.5          830-950 5-6
 9/18       2.5                  
-9/19       4      1          
+9/19       4      1
+9/20       ?    
+
+7 weeks
+9/21                          FB phone interview 
+9/22       1      1           
+9/23              2           947 -- 1120   600 630 
+
 
 </code></pre>
 </body>
