--- a/html/solution/Design_Crawler.html
+++ b/html/solution/Design_Crawler.html
@@ -88,8 +88,11 @@ Chord or KAD algorithm which is built on top of that, to see how to minimize com
                                                      Tradition Crawler design:
 <li> <a href="https://acecodeinterview.com/web_crawler">Ace crawler design (讲的像科普知识,缺乏design价值)</a></li>
 <li> <a href=https://www.educative.io/courses/grokking-the-system-design-interview/NE5LpPrWrKv
-      >Grokkking crawler design</a></li>
-                                              
+      >Grokkking crawler design（讲的比较详细</a></li>
+      <li> <a href="https://medium.com/@morefree7/design-a-distributed-web-crawler-f67a8ebb8336"（Distributed Hashtable)</a></li>
+            <li> <a href="https://link.springer.com/chapter/10.1007%2F978-3-540-24610-7_10" (Decentrialized Peer to Peer crawling network)</a></li>
+
+      
 
 I requirement + capacity
 
