--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -490,7 +490,8 @@ number   Date        rank         score    Finish time     Q1              Q2   
 7 weeks
 9/21                          FB phone interview 
 9/22       1      1           
-9/23              2           947 -- 1120   600 630 
+9/23              2.5         
+9/24                          930-1030 design 
 
 
 </code></pre>
