--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -491,8 +491,8 @@ number   Date        rank         score    Finish time     Q1              Q2   
 9/21                          FB phone interview 
 9/22       1      1           
 9/23              2.5         
-9/24                          930-1030 design 
-
+9/24                          930-1030 design bvb 5-6 coding
+9/25                          10:00 1200
 
 </code></pre>
 </body>
