--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -370,6 +370,7 @@
 <div class="codingSectionName">Intervals chapter</div>
 <ul>
   <li><a href="solution/mergeIntervals.html">Merge intervals</a> <a href=https://leetcode.com/problems/merge-intervals/>Q</a>  </li>
+  <li><a href="solution/insertInterval.html">Insert intervals</a> <a href=https://leetcode.com/problems/insert-interval/>Q</a>  </li>
 </ul>
 
 <div class="codingSectionName">Time Complexity/Data Structure Summary</div>
