--- a/html/solution/insertInterval.html
+++ b/html/solution/insertInterval.html
@@ -44,7 +44,7 @@ class Solution {
         
         int[][] ans = new int[ret.size()][2];
         
-        for( int i=0; i<ret.size(); i++){
+        for( int i=0; i&lt;ret.size(); i++){
             ans[i][0] = ret.get(i)[0];
             ans[i][1] = ret.get(i)[1];
         }
