--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -494,7 +494,7 @@ number   Date        rank         score    Finish time     Q1              Q2   
 9/24       1      1                  
 9/25              2             
 9/26       1.5    1.5     
-9/27                         1111   
+9/27       1.5     1           1111 1205 design          5  616 
 
 </code></pre>
 </body>
