--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -495,6 +495,12 @@ number   Date        rank         score    Finish time     Q1              Q2   
 9/25              2             
 9/26       1.5    1.5     
 9/27       1.5     1           1111 1205 design          5  616 
+           5      9
+
+8 weeks
+9/28       1      
+9/29               1           Message queue
+930        1       1             9-10 kafaka 1033 1139 coding
 
 </code></pre>
 </body>
