--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -501,6 +501,8 @@ number   Date        rank         score    Finish time     Q1              Q2   
 9/28       1      
 9/29               1           Message queue
 930        1       1             9-10 kafaka 1033 1139 coding
+10/1                             square phone interview 11
+10/2               1             kafka, 星期5状态很差，感觉脑子不转了。
 
 </code></pre>
 </body>
