--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -133,7 +133,7 @@
      <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
 	 <li><a href="solution/Six Degrees.html">Six degrees图的BFS由点及面）</a> <a href="http://www.lintcode.com/en/problem/six-degrees/">Q</a>  </li>
 	 <li><a href="solution/FindTheConnectedComponentInUndirectedGraph.html">Find the connected components in undirected graph(图的BFS由点及面）</a> <a href="http://www.lintcode.com/en/problem/find-the-connected-component-in-the-undirected-graph/">Q</a>  </li>
-     <li><a href="solution/IsGraphBipartite.html">is bipartile graphy(图的BFS由点及面）</a> <a href="https://leetcode.com/problems/is-graph-bipartite/description/">Q</a>  </li>
+     <li><a href="solution/IsGraphBipartite.html">is bipartile graphy(图的BFS三色染色法）</a> <a href="https://leetcode.com/problems/is-graph-bipartite/description/">Q</a>  </li>
 
 
 </ul>
@@ -395,6 +395,9 @@
 
 <div class="codingSectionName">Interview</div>
 <ul>
+   
+       <li><a href="interview/InterviewJava.txt">面试Java简易写法，更快代码更短</a> </li>
+
      	 <li><a href="interview/InterviewSummary.txt">面试心得</a> </li>
      	 <li><a href="interview/CompanyLevelProcess.txt">各大公司面试流程和职位等级</a> </li>
 
