--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -503,6 +503,13 @@ number   Date        rank         score    Finish time     Q1              Q2   
 930        1       1             9-10 kafaka 1033 1139 coding
 10/1                             square phone interview 11
 10/2               1             kafka, 星期5状态很差，感觉脑子不转了。
+10/3                             break 眼睛痛
+10/4                             break 眼睛痛 
 
+9 Weeks
+10/5                             twitter phone 
+10/6                             Google phone 2
+10/7                             SaleForce HM
+10/8       2
 </code></pre>
 </body>
