--- a/html/solution/basicCalculatorII.html
+++ b/html/solution/basicCalculatorII.html
@@ -11,6 +11,9 @@
 
 
 <pre><code>
+
+此题目的难点是*,/的处理，也是精华所在。解决办法是按照stack模型把前面的值pop出来，*或者/当前的值在压入stack.
+
   class Solution {
       public int calculate(String s) {
 
@@ -59,8 +62,6 @@
 
 
 
-<div class="comment">
-“+，-， *，／ 四则运算”
 
 
 算法 ：
