--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -43,7 +43,7 @@ ByteDance:
 Timeline consideration:
 1. Green card: Submit 485 on 2/5. 485 + 180 = 8/5.
 2. Sign on bonus: Microsoft sign on restriction is 9/24(20k)
-3. Performance bonus: Microsoft to give performance bonus 9/1. (15k)
+3. Performance bonus: Microsoft to give performance bonus 9/1. (16k)
 
 
 
@@ -510,6 +510,14 @@ number   Date        rank         score    Finish time     Q1              Q2   
 10/5                             twitter phone 
 10/6                             Google phone 2
 10/7                             SaleForce HM
-10/8       2
+10/8       3
+10/9       3                      1030-1200 coding   230 353
+10/10      3                     
+10/11                             10 - 11  1-2
+
+10 weeks 
+10/12                            Phone FB
+10/13                            Phone Square 
+10/14
 </code></pre>
 </body>
