--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -50,6 +50,7 @@ How to prepare System design:
 <li> <a href="Design_TypeAhead.html">TypeAhead</a></li>
 <li> <a href="Design_dropbox.html">DropBox</a></li>
 <li> <a href="Design_Crawler.html">Crawler</a></li>
+<li> <a href="Design_Kafka.html">Kafka</a></li>
 
 
 
@@ -58,9 +59,21 @@ Design Short URL
 
 
 
+Fb Design summary:
+https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=680958&extra=page%3D1%26filter%3Dsortid%26sortid%3D311%26searchoption%5B3086%5D%5Bvalue%5D%3D10%26searchoption%5B3086%5D%5Btype%5D%3Dradio%26searchoption%5B3087%5D%5Bvalue%5D%3D4%26searchoption%5B3087%5D%5Btype%5D%3Dradio%26searchoption%5B3046%5D%5Bvalue%5D%3D2%26searchoption%5B3046%5D%5Btype%5D%3Dradio%26searchoption%5B3109%5D%5Bvalue%5D%3D2%26searchoption%5B3109%5D%5Btype%5D%3Dradio%26sortid%3D311%26orderby%3Ddateline
 
 
-
+3. Instagram (Photo uploading, build timeline, followers, this is a read heavy system)
+4. Design a translation system (I guess this Product/API design)
+5. Design craigslist (User, product catalog, scaling)
+6. 图片浏览器 (not sure what this means, but most likely it is Product/API design)
+7. Design system for ad click count
+8. Design Youtube
+9. Design WhatsApp crash log collection and analytic system
+10. Design a job scheduler (see async)
+11. Design a system to return top hashtag of the feeds with a week (or some period)
+12. Typeahead (trie)
+13. News Feed
 
 
 
