--- a/html/solution/InterviewJava.html
+++ b/html/solution/InterviewJava.html
@@ -49,7 +49,13 @@ for( int i : arr){
 
 
 
+4. value type comparison for Stack
 
+   Stack<Integer> ret = new Stack<>();
+   Stack<Integer> minStack = new Stack<>();
+  
+   ret.peek() == minStack.peek() 这样比较出来的是reference type比较， 不是值比较
+   ret.peek().equals(miStack.peek()) 这样才是值比较.
 
 
 
