--- a/html/behavior/behavior.html
+++ b/html/behavior/behavior.html
@@ -13,6 +13,12 @@
         <img src="../../img/bq1.png" width="800px" height="800px">
 
 
+        <img src="../../img/bq2.jpeg" height="800px" width="800px">
+
+        <img src="../../img/bq3.jpeg" height="800px" width="800px">
+
+        <img src="../../img/bq4.jpeg" height="800px" width="800px">
+
 
     
         1. 答题思路 (STAR） Situation, task, action, result.
