--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -394,7 +394,7 @@
 <div class="codingSectionName">Behavior</div>
 <ul>
 
-     <li><a href="behavior/behavior.txt">常见行为问题答题例子</a></li>
+     <li><a href="behavior/behavior.html">常见行为问题答题例子</a></li>
      <li><a href="https://www.jiuzhang.com/article?tags=behavior-interview">九章讲解Behavior Question</a></li>
      <li><a href="https://www.google.com/url?hl=en&q=https://mp.weixin.qq.com/s/PteQ_cJrVFVWO5iGzLGYjg&source=gmail&ust=1524788109417000&usg=AFQjCNFpoexeMT38wA3QwrJsQO8UGRzQeg">How to handle multiple task</a></li>
      
