--- a/html/behavior/behavior.html
+++ b/html/behavior/behavior.html
@@ -8,16 +8,31 @@
     <body>
     <pre><code>
 
-        大的方向不要错。
-        猪队友：
+        <img src="../../img/bq4.jpeg" height="800px" width="800px">
+        Why left previous company        <br></br>
+        1. 上家公司好，have learned a lot, has grown a lot.        <br></br>
+        2. Interested in this company.        <br></br>
+
+
+        <br></br>
+        <br></br>
+
+
+        <img src="../../img/bq3.jpeg" height="800px" width="800px">
+        Why this position?
+        1. 职位理解        <br></br>
+        2. 如何胜任        <br></br>
+        3. 如何感兴趣        <br></br>
+
+        <br></br>
+        <br></br>
+        
         <img src="../../img/bq1.png" width="800px" height="800px">
 
 
         <img src="../../img/bq2.jpeg" height="800px" width="800px">
 
-        <img src="../../img/bq3.jpeg" height="800px" width="800px">
 
-        <img src="../../img/bq4.jpeg" height="800px" width="800px">
 
 
     
