--- a/html/behavior/behavior.html
+++ b/html/behavior/behavior.html
@@ -9,9 +9,9 @@
     <pre><code>
 
         <img src="../../img/bq4.jpeg" height="800px" width="800px">
-        Why left previous company        <br></br>
-        1. 上家公司好，have learned a lot, has grown a lot.        <br></br>
-        2. Interested in this company.        <br></br>
+        Why left previous company        
+        1. 上家公司好，have learned a lot, has grown a lot.        
+        2. Interested in this company. make impact and grow.       
 
 
         <br></br>
@@ -20,19 +20,28 @@
 
         <img src="../../img/bq3.jpeg" height="800px" width="800px">
         Why this position?
-        1. 职位理解        <br></br>
-        2. 如何胜任        <br></br>
-        3. 如何感兴趣        <br></br>
+        1. 职位理解        
+        2. 如何胜任        
+        3. 如何感兴趣       
 
         <br></br>
         <br></br>
-        
+
         <img src="../../img/bq1.png" width="800px" height="800px">
+        猪队友
+        1. work with him, communicate with him, try to unblock him 
+        2. escalate to management
+        <br></br>
+        <br></br>
+
 
 
         <img src="../../img/bq2.jpeg" height="800px" width="800px">
-
-
+        1. 说一些不痛不疡的。 
+           pay too much attension to detail
+           not make the best decision when handling multi-tasking
+           <br></br>
+           <br></br>
 
 
     
