--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -27,8 +27,8 @@ Amzn:
     L6: 160 +       275k        = 435k
 
 OCI:
-  IC3:  185 + 120k + 25k = 325k      [61,62] -> IC3 Senior MTS
-  IC4:  200 + 170k + 20k = 390k      [63,64] -> IC4 Senior MTS
+  IC3:  150 + 70  + 25k = 250      [61,62] -> IC3 Senior MTS
+  IC4:  225 + 110 + 50k = 375      [63,64] -> IC4 Senior MTS
 
 SaleForce:
   Senior: 180 + 60 + 50k + 15% bonus = 320k
