--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -261,7 +261,8 @@
    <li><a href="solution/Trie.html">Trie<a href=https://leetcode.com/problems/implement-trie-prefix-tree/description/>Q</a>  </li>
    <li><a  href="solution/IntertInterval">Insert Interval<a href=https://leetcode.com/problems/insert-interval/discuss/21600/Short-java-code>Q</a>  </li>
    <li><a href=TaskScheduler.html>Sliding Window Maximum( Deque )</a> <a href=https://leetcode.com/problems/sliding-window-maximum/> Q</a></li>
-   
+   <li><a href=https://leetcode.com/problems/diagonal-traverse-ii/>TreeMap</a></li>
+
 </ul>
 
 <div class="codingSectionName">String</div>
@@ -394,16 +395,13 @@
 <div class="codingSectionName">Behavior</div>
 <ul>
 
-     <li><a href="behavior/behavior.html">常见行为问题答题例子</a></li>
-     <li><a href="https://www.jiuzhang.com/article?tags=behavior-interview">九章讲解Behavior Question</a></li>
-     <li><a href="https://www.google.com/url?hl=en&q=https://mp.weixin.qq.com/s/PteQ_cJrVFVWO5iGzLGYjg&source=gmail&ust=1524788109417000&usg=AFQjCNFpoexeMT38wA3QwrJsQO8UGRzQeg">How to handle multiple task</a></li>
-     
+     <li><a href="behavior/behavior.html">常见行为问题答题例子</a></li>     
 </ul>
 
 <div class="codingSectionName">Interview</div>
 <ul>
    
-       <li><a href="interview/InterviewJava.txt">面试Java简易写法，更快代码更短</a> </li>
+       <li><a href="interview/InterviewJava.html">面试Java简易写法，更快代码更短</a> </li>
 
      	 <li><a href="interview/InterviewSummary.txt">面试心得</a> </li>
      	 <li><a href="interview/CompanyLevelProcess.txt">各大公司面试流程和职位等级</a> </li>
