--- a/html/solution/MergeKSortedList.html
+++ b/html/solution/MergeKSortedList.html
@@ -11,7 +11,7 @@
 
 
 <pre><code>
-///////////////////////////////////// SOLUTION One : PriorityQueue
+                                 SOLUTION One : PriorityQueue
 
 
 
