--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -401,7 +401,7 @@
 <div class="codingSectionName">Interview</div>
 <ul>
    
-       <li><a href="interview/InterviewJava.html">面试Java简易写法，更快代码更短</a> </li>
+       <li><a href="interview/InterviewJava.html">Java简易写法</a> </li>
 
      	 <li><a href="interview/InterviewSummary.txt">面试心得</a> </li>
      	 <li><a href="interview/CompanyLevelProcess.txt">各大公司面试流程和职位等级</a> </li>
