--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -81,13 +81,19 @@
 </ul>
 
 
-<div class="codingSubSectionName">DFS + Memorization 跳棋模型：给定步数 + 走法限制，求多少种走法 DFS 优化到 -> DFS + Memorization )</div>
+<div class="codingSubSectionName">DFS + Memorization 跳棋模型：给定步数 + 走法限制，求多少种走法)</div>
 <ul>
    <li><a href="solution/KnightDialer.html">Knight Dialer</a> <a href="https://leetcode.com/problems/knight-dialer/">Q</a></li>
    <li><a href="solution/NumberofWaystoStayintheSamePlace.html">Number of Ways to stay in the same place</a> <a href="https://leetcode.com/problems/number-of-ways-to-stay-in-the-same-place-after-some-steps/">Q</a></li>
    <li><a href="solution/numberOfDiceWithTargetValue.html">Number of Dice with target Value </a> <a href="https://leetcode.com/problems/number-of-dice-rolls-with-target-sum/">Q</a></li>
    <li><a href="https://leetcode.com/problems/target-sum">Target Sum</a></li>
    <li> <a href="solution/letterCombination.html">Letter combination( Different element on each level)</a></li></ul>
+</ul>
+
+<div class="codingSubSectionName">DFS + Memorization: 2D Matrix)</div>
+<ul>
+   <li><a href="solution/LongestIncreasingPathinaMatrix.html">329. Longest Increasing Path in a Matrix
+   </a> <a href=https://leetcode.com/problems/longest-increasing-path-in-a-matrix/>Q</a></li>
 </ul>
 
 <div class="codingSubSectionName">DFS栈太深产生Stack overflow或者运算量太大TLE, 但这些题目都是求最小步数，马上换成BFS做)</div>
