--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -280,7 +280,7 @@
 	 <li><a href="solution/longestSubStrwithoutduplicate.html">longest substring without duplicate(最长无重复子串, 双指针异步）</a> <a href=https://leetcode.com/problems/longest-substring-without-repeating-characters/>Q</a>  </li>
 	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长连续的k个不同字符子串， 双指针+HashMap）</a> <a href=https://leetcode.com/problems/longest-substring-with-at-most-k-distinct-characters/>Q</a>  </li>
 	 <li><a href="solution/MinimalWindowSubstring.html">Minimal Window Substring(双指针异步)</a> <a href="https://leetcode.com/problems/longest-palindromic-substring/description/">Q</a>  </li>
-   <li><a href="solution/LongestPalindromSubstring.html">Longest palindrom substring最长回文子串</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
+   <li><a style="color:green" href="solution/LongestPalindromSubstring.html">Longest palindrom substring最长回文子串(超级高频率，onsite被问两次）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 
    <li><a href="solution/StringCompression.html">String compression(字符串压缩，读写指针同步）</a> <a href=https://leetcode.com/problems/string-compression/submissions/1>Q</a>  </li>
    <li><a href="solution/ValidWordAbbreviation.html">Valid word abbreviation(字符串压缩，双指针同步）</a> <a href="https://leetcode.com/problems/valid-word-abbreviation/description/">Q</a>  </li>
