--- a/html/solution/LongestIncreasingPathinaMatrix.html
+++ b/html/solution/LongestIncreasingPathinaMatrix.html
@@ -102,7 +102,7 @@ class Solution {
        int m = matrix.length;
        int n = matrix[0].length;
        
-       for( int i=0; i<m; i++){
+       for( int i=0; i&lt;m; i++){
            for( int j=0; j&lt;n; j++){
                ret = Math.max( ret, helper(m, n, i, j, matrix, new Integer[m][n]));
            }
@@ -147,7 +147,7 @@ class Solution {
        int n = matrix[0].length;
        Integer[][] memo = new Integer[m][n];
        
-       for( int i=0; i<m; i++){
+       for( int i=0; i&lt;m; i++){
            for( int j=0; j&lt;n; j++){
                ret = Math.max( ret, helper(m, n, i, j, matrix, memo));
            }
