--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -96,10 +96,15 @@
    </a> <a href=https://leetcode.com/problems/longest-increasing-path-in-a-matrix/>Q</a></li>
 </ul>
 
-<div class="codingSubSectionName">DFS栈太深产生Stack overflow或者运算量太大TLE, 但这些题目都是求最小步数，马上换成BFS做)</div>
+<div class="codingSubSectionName">DFS栈太深产生Stack overflow或者运算量太大TLE, 换成BFS)</div>
 <ul>
    <li><a href="solution/racecar.html">Race car（栈太深产生Stack overflow）</a> <a href="https://leetcode.com/problems/race-car/">Q</a></li>
    <li><a href="solution/MinFlipstoConvertBinaryMatrixtoZeroMatrix.html">Min Flips to Convert Binary Matrix to Zero Matrix（运算量太大TLE）</a> <a href="https://leetcode.com/problems/minimum-number-of-flips-to-convert-binary-matrix-to-zero-matrix/">Q</a>  </li>
+</ul>
+
+<div class="codingSubSectionName">constraint DFS，非典型的写法)</div>
+<ul>
+   <li><a href="solution/SplitArrayLargestSum.html">Split Array Largest Sum</a> <a href="https://leetcode.com/problems/split-array-largest-sum/">Q</a></li>
 </ul>
 
 <div class="codingSubSectionName">Subset search in Binary Tree</div>
